--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -1,3 +1,8 @@
+h1 {
+  font-family: "Avenir";
+  color: white;
+}
+
 body {
   padding: 2%;
   background-image: url('./../images/Background.png');
@@ -7,9 +12,8 @@ body {
 }
 
 #ladder {
+  font-family: "Avenir";
   width: 55%;
-  border-style: solid;
-  border-width:  1px;
   border-color: gray;
   border-radius: 5px;
   overflow: hidden;
@@ -19,4 +23,9 @@ body {
 
 #ladder_row:hover {
   background-color: #313131;
+  opacity: 0.75;
+}
+
+#rank {
+  width: 50%;
 }
