--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -29,3 +29,10 @@ body {
 #rank {
   width: 50%;
 }
+
+.button {
+  border-radius: 4px;
+  text-decoration: none;
+  border: 2px solid #5A5A5A;
+
+}
