Refactor angular controller functions

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -101,6 +101,14 @@ form {
   font-size: 15px;
 }
 
+#addplayerbutton:focus {
+  outline: none;
+}
+
+#swapbutton:focus {
+  outline: none;
+}
+
 .form-control:focus {
   outline: none;
 }
